# home-energy-model-lambda

./: .gitignore  .gitmodules  .pdm-python  README.md  dynamo_stream_orchestrator.yaml  pyproject.toml  sam_template.tf  template.yaml
demo__results/: convert_summary_csv_to_json.py  demo__core__results.csv  demo__core__results_static.csv  demo__core__results_summary.csv  example_summary_results.json  output.json
dynamo_stream_orchestrator/: .pdm-python  function.py  pyproject.toml  step_function_trigger.py  test_stream_event.json  trigger_hem_model_run.py
hello_world/: app.py  convert_summary_csv_to_json.py  requirements.txt
hello_world/hem/: .gitignore  README.md  requirements_3-6.txt  requirements_3-9.txt
hello_world/hem/src/: hem.py
hello_world/hem/src/core/: external_conditions.py  pipework.py  project.py
hello_world/hem/src/core/controls/: time_control.py
hello_world/hem/src/core/energy_supply/: energy_supply.py  pv.py
hello_world/hem/src/core/heating_systems/: boiler.py  heat_battery.py  heat_network.py  heat_pump.py  storage_tank.py
hello_world/hem/src/core/space_heat_demand/: building_element.py  ventilation.py  zone.py
hello_world/hem/test/: conftest.py
hello_world/hem/test/batch_running_tool/: README - impact assessment.md  README.md  batch_tool.py
hello_world/hem/test/e2e/: test_demo_files.py
hello_world/hem/test/impact_testing/: git_checkout_and_run_JSONs.sh
hem_eval_function/: .dockerignore  .pdm-python  Dockerfile  GBR_ENG_Eastbourne.038830_TMYx.epw  pyproject.toml
lambda_function/: convert_summary_csv_to_json.py  function.py
(+252 files in other folders)
